--- a/pages/students.html
+++ b/pages/students.html
@@ -25,24 +25,24 @@
         <h1 class="header-students">Студенты потока 08.02.2020</h1>
         <div class="students">
             <section class="student">
-                <a href="https://mary-berdysh.github.io/My-site/" target="_blank"><img src="../img/MEРесурс 4.svg" alt="" width="200px" height="270px"></a>
+                <a href="https://mary-berdysh.github.io/My-site/" target="_blank"><img class="student-icon" src="../img/ME.svg" alt="icon-link"></a>
                 <p>Мария Бердышева</p>
             </section>
             <section class="student">
-                <img src="../img/НовичокРесурс 2.svg" alt="" width="200px" height="270px">
+                <img class="student-icon" src="../img/Новичок.svg" alt="icon">
                 <p>Мария Александрова</p>
                 <span class="new-student">Новичок</span>
             </section>
             <section class="student">
-                <img src="../img/ЛеяРесурс 3.svg" alt="" width="200px" height="270px">
+                <img class="student-icon" src="../img/Лея.svg" alt="icon">
                 <p>Мария Александрова</p>
             </section>
             <section class="student">
-                <img src="../img/1Ресурс 1.svg" alt="" width="200px" height="270px">
+                <img class="student-icon" src="../img/1.svg" alt="icon">
                 <p>Василий Иванов</p>
             </section>
             <section class="student">
-                <img src="../img/1Ресурс 1.svg" alt="" width="200px" height="270px">
+                <img class="student-icon" src="../img/1.svg" alt="icon">
                 <p>Василий Иванов</p>
             </section>
         </div>
